 6. Fix clipping of plastik style mosue over for max/extra round.
 7. Only do mouse over for entries if combos and spin widgets are unified.
 8. If not etching entries, reduce height of editable combo by 2 pixels.
 9. If not etching/shadowing, when mosue over set to 'glow' use 'thick coloured'
10. If not etching/shadowing, make descrease thinner scrollbar groove.

0.67.4
------
1. Dont create a KComponentData if KGlobal::hasMainComponent() is true. Fixes
   plasma crash on logout.
2. Move menu text 2 pixels closer to icon - matches Gtk2 better.
3. Improve the appearance of QWhatsThis shadows.

0.67.3
------
1. Fix crash in system settings when changing colours.
2. Yet another attempt to better align button text with Gtk2.
3. Fix plastik style mouse over on scrollbars.
4. Draw arrows in popupmenus closer to edge - matches Gtk2 better.
5. Fix border width of Gtk style combobox menus.

0.67.2
------
1. Fix titlebar gradients when inactive!=active
2. Fix garbage on window decoration under KDE4.3 when not compositing

0.67.1
------
1. Adjust Agua overlay if widget is not max rounded.
2. Fix rounding of scrollbar groove.
3. Use icon metrics for all 'AutoDefault' buttons. This should now better match Gtk2
   - where 'can default' buttons always seem to reserve enough height for an icon.
4. If linked against KDE, use KDE4's icon size settings to control the size of icons
   in menus, buttons, and toolbars.

0.67.0
------
 1. Add option to draw insider border of inactive tabs.
 2. Add option to draw double arrows for Gtk style combos.
 3. Add option to colour the sorted listview header.
 4. Disable spin button when at min/max - matches Gtk2.
 5. Disable scrollbar buttons when at min/max - to match spin buttons.
 6. Place non-V arrows of unified spin widgets closer together.
 7. For scrollviews that are windows, dont round and always place scrollbar within
    frame.
 8. Improve appearance of max rounded pushbuttons in Arora.